update component ts

--- a/src/app/admin/comments/comments.component.html
+++ b/src/app/admin/comments/comments.component.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row fw-semibold p-4">Comments({{comments.length}})</div>
+            <div class="row fw-semibold p-4">Comments({{comments?.length}})</div>
             <ng-container *ngFor="let data of comments">
                 <div class="container border mb-2 p-4">
                     <div class="d-flex justify-content-center row">
